--- a/colleges/pes-university.html
+++ b/colleges/pes-university.html
@@ -196,20 +196,27 @@
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
-                <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
-                <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
-                </span>
-                <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
-                </span>
+              <span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
             </li>
-        </ul>
+          </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
