--- a/acharya-institute-of-technology.html
+++ b/acharya-institute-of-technology.html
@@ -293,7 +293,7 @@
       <div class="row justify-content-around mb-0 pt-5 mx-4">
         <div class="col-xl-2 col-md-4 order-xl-1 order-4 mr-xl-0 my-auto">
           <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Social Media</label>
+            <label id="footer-bold-label">Social Media</label>
             <li class="social">
               <span>
                 <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
@@ -303,7 +303,7 @@
                     class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
-                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                <a href="https://www.instagram.com/eduprov_education/" #id="footer-url" class="text-white"> <i
                     class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
@@ -313,9 +313,9 @@
             </li>
           </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Address</label>
+            <label id="footer-bold-label">Address</label>
             <p>
-              No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -325,15 +325,15 @@
             </p>
           </ul>
           <ul class="list-unstyled my-xl-4 my-md-3">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Copyright</label>
-            <a href="https://github.com/thephotogenicbug" style="text-decoration: none; color: white">
+            <label class="mt-md-0 mt-4" id="footer-bold-label">Copyright</label>
+            <a href="https://github.com/thephotogenicbug" id="links">
               <li>&#9400; thephotogenicbug</li>
             </a>
           </ul>
         </div>
         <div class="col-xl-2 col-md-3 pt-4 order-1">
           <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">USA Location</label>
+            <label class="mt-md-0 mt-4" id="footer-bold-label">USA Location</label>
             <p>
               N.E Blaine Minnesota USA 55434<br />
               (+1) 651 967 7789
@@ -341,76 +341,67 @@
           </ul>
         </div>
 
-        <div class="col-xl-2 col-md-3 pt-4 order-2">
+       <!-- <div class="col-xl-2 col-md-3 pt-4 order-2">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Study Abroad</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>USA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>UK</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>AUSTRALIA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>CANADA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#"class="links">
               <li>GERMANY</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href=""class="links">
               <li>ARMENIA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#"class="links">
               <li></li>
             </a>
           </ul>
-        </div>
+        </div>-->
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Exams</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CET</li>
+            <a href="https://eduprov.com/kcet-exam-information.html" id="links">
+              <li>KCET</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>IIT-JEE</li>
+            <a href="https://eduprov.com/jee-exam-blog.html" id="links">
+              <li>JEE</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>GATE</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>AIPMT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CAT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MAT</li>
+            <a href="https://eduprov.com/neet-exam.html" id="links">
+              <li>NEET</li>
             </a>
           </ul>
         </div>
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/mba-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba-course-blogs.html" id="links">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/medical-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical-course-blogs.html" id="links">
               <li>MEDICAL</li>
             </a>
             <a href="https://eduprov.com/engineering-course-blogs.html"
-              style="text-decoration: none; color: white">
+            id="links">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/law-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law-course-blogs.html" id="links">
               <li>LAW</li>
             </a>
-            <a href="hhttps://eduprov.com/designing-course-blogs.html" style="text-decoration: none; color: white">
-              <li>DESIGNING</li>
+            <a href="https://eduprov.com/designing-course-blogs.html"  id="links">
+              <li >DESIGNING</li>
             </a>
             <a href="https://eduprov.com/arts-course-blogs.html"
-              style="text-decoration: none; color: white">
+            id="links">
               <li>ARTS</li>
             </a>
           </ul>
@@ -420,5 +411,5 @@
   </div>
   <!--Footer End-->
 </body>
-
+<script src="app.js"></script>
 </html>
