--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     })(window, document, "clarity", "script", "6wazy9nehy");
   </script>
 
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=60e449ef963da8001312b9ad&product=sticky-share-buttons" async="async"></script>
 
 </head>
 
@@ -134,7 +135,10 @@
       </div>
     </div>
   </div>
+
+
   
+  <!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
 
 
   <section class="section-services">
@@ -599,12 +603,12 @@
   </div>
 
 
-  <div class="container-fluid justify-content-center px-0 ">
+  <div class="container-fluid justify-content-center px-0">
     <footer>
       <div class="row justify-content-around mb-0 pt-5 mx-4">
         <div class="col-xl-2 col-md-4 order-xl-1 order-4 mr-xl-0 my-auto">
           <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Social Media</label>
+            <label id="footer-bold-label">Social Media</label>
             <li class="social">
               <span>
                 <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
@@ -614,7 +618,7 @@
                     class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
-                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                <a href="https://www.instagram.com/eduprov_education/" #id="footer-url" class="text-white"> <i
                     class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
@@ -623,11 +627,10 @@
               </span>
             </li>
           </ul>
-
           <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Address</label>
+            <label id="footer-bold-label">Address</label>
             <p>
-              No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -635,22 +638,17 @@
               Contact:<br />
               +91 80 25591146
             </p>
-
           </ul>
           <ul class="list-unstyled my-xl-4 my-md-3">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Copyright</label>
-            <a href="https://github.com/thephotogenicbug" style="text-decoration: none; color: white">
+            <label class="mt-md-0 mt-4" id="footer-bold-label">Copyright</label>
+            <a href="https://github.com/thephotogenicbug" id="links">
               <li>&#9400; thephotogenicbug</li>
             </a>
           </ul>
         </div>
         <div class="col-xl-2 col-md-3 pt-4 order-1">
           <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">USA Location</label>
-            <a href="https://eduprov.com/sitemap.html" #id="footer-url" class="text-white">
-              <li>Sitemap</li>
-            </a>
-            <br />
+            <label class="mt-md-0 mt-4" id="footer-bold-label">USA Location</label>
             <p>
               N.E Blaine Minnesota USA 55434<br />
               (+1) 651 967 7789
@@ -658,77 +656,67 @@
           </ul>
         </div>
 
-        <div class="col-xl-2 col-md-3 pt-4 order-2">
+       <!-- <div class="col-xl-2 col-md-3 pt-4 order-2">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Study Abroad</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>USA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>UK</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>AUSTRALIA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>CANADA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#"class="links">
               <li>GERMANY</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href=""class="links">
               <li>ARMENIA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#"class="links">
               <li></li>
             </a>
-
           </ul>
-        </div>
+        </div>-->
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Exams</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CET</li>
+            <a href="https://eduprov.com/kcet-exam-information.html" id="links">
+              <li>KCET</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>IIT-JEE</li>
+            <a href="https://eduprov.com/jee-exam-blog.html" id="links">
+              <li>JEE</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>GATE</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>AIPMT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CAT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MAT</li>
+            <a href="https://eduprov.com/neet-exam.html" id="links">
+              <li>NEET</li>
             </a>
           </ul>
         </div>
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/mba-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba-course-blogs.html" id="links">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/medical-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical-course-blogs.html" id="links">
               <li>MEDICAL</li>
             </a>
             <a href="https://eduprov.com/engineering-course-blogs.html"
-              style="text-decoration: none; color: white">
+            id="links">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/law-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law-course-blogs.html" id="links">
               <li>LAW</li>
             </a>
-            <a href="hhttps://eduprov.com/designing-course-blogs.html" style="text-decoration: none; color: white">
-              <li>DESIGNING</li>
+            <a href="https://eduprov.com/designing-course-blogs.html"  id="links">
+              <li >DESIGNING</li>
             </a>
             <a href="https://eduprov.com/arts-course-blogs.html"
-              style="text-decoration: none; color: white">
+            id="links">
               <li>ARTS</li>
             </a>
           </ul>
@@ -736,6 +724,19 @@
       </div>
     </footer>
   </div>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/60e43ea3649e0a0a5ccac71c/1f9tp9bus';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
