--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -94,9 +94,16 @@
       y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "6wazy9nehy");
   </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-94021714-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-94021714-1');
+</script>
 <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=60e449ef963da8001312b9ad&product=sticky-share-buttons" async="async"></script>
-
 </head>
 
 <body class="bg-light">
@@ -109,7 +116,8 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <div id="logo">
@@ -133,7 +141,7 @@
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-        <img class="rounded-lg-3" src="images/Hero-img.webp" alt="Hero-rounded-img" width="720"  title="Hero Image">
+        <img class="rounded-lg-3" src="images/Hero-img.webp" alt="Hero-rounded-img" width="720px" height="520px"   title="Hero Image">
       </div>
     </div>
   </div>
@@ -141,14 +149,12 @@
 
   
   <!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
-
-
   <section class="section-services">
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-md-10 col-lg-8">
-          <div class="header-section">
-            <h2 class="title">Service Offered</h2>
+          <div class="header-section mt-5">
+            <h3 class="title mt-3">Service Offered</h3>
             <p class="description">Admission Guidance, Career Counseling and Overseas Education.</p>
           </div>
         </div>
@@ -450,7 +456,7 @@
         </div>
       </div>
       <div class="row" data-aos="fade-up">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <p class="text-justify text-dark" id="paragraph-font">
             <b>Best Admission Guidance in Bangalore</b> Eduprov is an esteemed name in <b>Career Counseling, Overseas
               Education & Admission Guidance</b> institute located in the heart of Bengaluru. EDUPROV works to promote
@@ -472,8 +478,8 @@
             safeguard accomplishment of goals for today, tomorrow, and always.
           </p>
         </div>
-        <div class="col-md-6">
-          <img src="./images/student-time-management.svg"  alt="Student-icon" height="420px" width="520px"   title="Student Sitting in a Wheel"/>
+        <div class="col-md-4">
+          <img src="./images/student-time-management.svg"  alt="Student-icon" height="420px" width="420px"   title="Student Sitting in a Wheel"/>
         </div>
       </div>
     </div>
@@ -489,7 +495,7 @@
         </div>
       </div>
       <div class="row" data-aos="fade-up">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <p class="text-justify text-dark" id="paragraph-font">
             <b>Eduprov Education is an Educational Consultancy</b> offering all primitive and prevalent services like
             <b>Admission Guidance, Career Counseling and Overseas Education</b>. Eduprov`s main vision is to change a
@@ -510,8 +516,8 @@
           </p>
 
         </div>
-        <div class="col-md-6">
-          <img src="./images/book-lovers.svg"  alt="Student-icon" height="420px" width="520px"  title="Kid with a book in his hand"/>
+        <div class="col-md-4">
+          <img src="./images/book-lovers.svg"  alt="Student-icon" height="320px" width="420px"  title="Kid with a book in his hand"/>
         </div>
       </div>
       <div class="row" data-aos="fade-up">
@@ -751,7 +757,4 @@
   </script>
 </body>
 <script src="app.js"></script>
-
-
-
 </html>
